--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "todo-ping-app",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "jest --config jest.config.mjs",
+    "test:watch": "jest --config jest.config.mjs --watch",
+    "test:coverage": "jest --config jest.config.mjs --coverage",
     "test:e2e": "cypress open",
     "test:e2e:headless": "cypress run",
     "test:component": "cypress open --component",
@@ -21,6 +22,9 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-typescript": "^7.23.0",
+    "@cypress/vite-dev-server": "^5.0.0",
+    "@cypress/vue": "^6.0.0",
+    "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^4.6.2",
@@ -29,13 +33,12 @@
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "cypress": "^13.6.0",
-    "@cypress/vue": "^6.0.0",
-    "@cypress/vite-dev-server": "^5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
-    "sass": "^1.69.5",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.3.6",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.3",
     "vue-tsc": "^1.8.22"
