--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test": "jest --config jest.config.mjs",
     "test:watch": "jest --config jest.config.mjs --watch",
     "test:coverage": "jest --config jest.config.mjs --coverage",
     "test:e2e": "cypress open",
-    "test:e2e:headless": "cypress run",
-    "test:component": "cypress open --component",
-    "test:component:headless": "cypress run --component"
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "vue": "^3.4.0"
@@ -27,7 +25,7 @@
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/test-utils": "^2.4.0",
     "@vue/vue3-jest": "^29.2.0",
     "autoprefixer": "^10.4.16",
@@ -38,9 +36,9 @@
     "postcss": "^8.4.31",
     "sass": "^1.77.6",
     "tailwindcss": "^3.3.6",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.3",
-    "vue-tsc": "^1.8.22"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.8.3",
+    "vite": "^5.4.19",
+    "vue-tsc": "^2.2.10"
   }
 }
